--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@primeuix/themes": "^1.2.3",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-sql": "^2.3.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
     "rxjs": "~7.8.2",
