--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,10 @@
                 "output": "assets"
               }
             ],
-            "styles": ["src/styles.scss"]
+            "styles": [
+              "node_modules/quill/dist/quill.snow.css",
+              "src/styles.scss"
+            ]
           },
           "configurations": {
             "production": {
