--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "^2.3.0",
+    "ngx-quill": "^28.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
