--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "^2.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "ngx-quill": "^28.0.1",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
@@ -35,6 +37,7 @@
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.4",
     "@tauri-apps/cli": "^2",
+    "@types/html2canvas": "^0.5.35",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
